style: support dark/light theme

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,17 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="viewport"
+			content="width=device-width,initial-scale=1,shrink-to-fit=no"
+		/>
+		<meta name="author" content="Conrad Hoang" />
+		<meta name="theme-color" content="#F9E2AF" />
+
+		<!-- TODO: Config for PWA -->
+
+		<meta property="og:type" content="website" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
