--- a/src/app.html
+++ b/src/app.html
@@ -2,18 +2,33 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta
 			name="viewport"
 			content="width=device-width,initial-scale=1,shrink-to-fit=no"
 		/>
 		<meta name="author" content="Conrad Hoang" />
 		<meta name="theme-color" content="#F9E2AF" />
-
-		<!-- TODO: Config for PWA -->
-
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="%sveltekit.assets%/icons/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="%sveltekit.assets%/icons/favicon-32x32.png"
+		/>
+		<link rel="shortcut icon" href="%sveltekit.assets%/icons/favicon-32x32.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="%sveltekit.assets%/icons/favicon-16x16.png"
+		/>
+		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/icons/favicon.svg" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<meta property="og:type" content="website" />
-
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
