--- a/src/app.html
+++ b/src/app.html
@@ -26,7 +26,7 @@
 			sizes="16x16"
 			href="%sveltekit.assets%/icons/favicon-16x16.png"
 		/>
-		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/icons/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/icons/icon.svg" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<meta property="og:type" content="website" />
 		%sveltekit.head%
