--- a/src/app.html
+++ b/src/app.html
@@ -34,4 +34,15 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
+
+	<div class="hidden" itemscope itemtype="http://schema.org/Person">
+		<span itemprop="gender">Male</span>
+		<span itemprop="email">tcmhoang@outlook.com</span>
+		<span itemprop="givenName">Tuan</span>
+		<span itemprop="familyName">Hoang</span>
+		<span itemprop="name">Tuan Minh Hoang</span>
+		<span itemprop="additionalName">Conrad Hoang</span>
+		<span itemprop="jobTitle">Software Engineer</span>
+		<span itemprop="nationality">VN</span>
+	</div>
 </html>
