--- a/src/app.html
+++ b/src/app.html
@@ -31,11 +31,12 @@
 		<meta property="og:type" content="website" />
 		%sveltekit.head%
 	</head>
+
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 
-	<div class="hidden" itemscope itemtype="http://schema.org/Person">
+	<div class="hidden" aria-hidden="true" itemtype="http://schema.org/Person">
 		<span itemprop="gender">Male</span>
 		<span itemprop="email">tcmhoang@outlook.com</span>
 		<span itemprop="givenName">Tuan</span>
