--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta
-			name="viewport"
-			content="width=device-width,initial-scale=1,shrink-to-fit=no"
-		/>
+		<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
 		<meta name="author" content="Conrad Hoang" />
 		<meta name="theme-color" content="#F9E2AF" />
 		<link
@@ -29,6 +26,7 @@
 		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/icons/icon.svg" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<meta property="og:type" content="website" />
+
 		%sveltekit.head%
 	</head>
 
