--- a/src/app.html
+++ b/src/app.html
@@ -5,12 +5,26 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
 		<meta name="author" content="Conrad Hoang" />
 		<meta name="theme-color" content="#F9E2AF" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
-		<link rel="shortcut icon" href="/icons/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
-		<link rel="icon" type="image/svg+xml" href="/icons/icon.svg" />
-		<link rel="manifest" href="/manifest.json" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="%sveltekit.assets%/icons/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="%sveltekit.assets%/icons/favicon-32x32.png"
+		/>
+		<link rel="shortcut icon" href="%sveltekit.assets%/icons/favicon-32x32.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="%sveltekit.assets%/icons/favicon-16x16.png"
+		/>
+		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/icons/icon.svg" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<meta property="og:type" content="website" />
 
 		%sveltekit.head%
