--- a/src/app.html
+++ b/src/app.html
@@ -8,20 +8,20 @@
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="%sveltekit.assets%/icons/apple-touch-icon.png"
+			href="%sveltekit.assets%/images/apple-touch-icon.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="%sveltekit.assets%/icons/favicon-32x32.png"
+			href="%sveltekit.assets%/images/favicon-32x32.png"
 		/>
-		<link rel="shortcut icon" href="%sveltekit.assets%/icons/favicon-32x32.png" />
+		<link rel="shortcut icon" href="%sveltekit.assets%/images/favicon-32x32.png" />
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="%sveltekit.assets%/icons/favicon-16x16.png"
+			href="%sveltekit.assets%/images/favicon-16x16.png"
 		/>
 		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/icons/icon.svg" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
